Add noscript notice

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <base href="/">
     <title>Arvale</title>
+    <style>
+      body {
+        background: #12151d;
+        color: #fff;
+      }
+
+      .no-js-notice {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: sans-serif;
+      }
+    </style>
   </head>
   <body>
+    <noscript>
+      <div class="no-js-notice">
+        JavaScript is required to use this website. Please make sure it's enabled and that scripts are not being blocked. Thank you!
+      </div>
+    </noscript>
     <div id="app"></div>
   </body>
 </html>
